# show_cases

./: .gitignore  readme.md  readme_cn.md
anpr_tasks/: CMakeLists.txt  main.cpp  readme.md  readme_cn.md
anpr_tasks/algo/: anpr_algo.cpp  anpr_algo.hpp  anpr_algo_predict_results.hpp  anpr_results_drawer.cpp  anpr_results_drawer.hpp  anpr_worker.cpp  anpr_worker.hpp  anpr_worker_results.hpp
anpr_tasks/config/: config_anpr_worker.hpp  config_object_detect_model_select.hpp  config_source_selection.hpp
anpr_tasks/global/: global_keywords.cpp  global_keywords.hpp
anpr_tasks/model_results/nanodet/: eval_results_m320.txt  eval_results_m416.txt
anpr_tasks/ui/: mainwindow.cpp  mainwindow.ui  widget_object_detect_model_select.cpp  widget_source_selection.cpp  widget_source_selection.hpp  widget_source_selection.ui  widget_stacks_anpr.cpp  widget_stacks_anpr.hpp  widget_stacks_anpr.ui  widget_stacks_manager.cpp  widget_stacks_manager.hpp  widget_stream_player.cpp  widget_stream_player.hpp  widget_stream_player.ui
face_recognition_tasks/: CMakeLists.txt  main.cpp  readme.md  readme_cn.md  trouble_records.md  trouble_records_cn.md
face_recognition_tasks/algo/face_register/: face_register_results.hpp  face_register_worker.cpp  face_register_worker.hpp
face_recognition_tasks/algo/face_search/: face_search_worker.cpp  face_search_worker.hpp  face_search_worker_results.hpp
face_recognition_tasks/config/: config_face_det_model_select.hpp  config_face_recognition_model_select.hpp  config_face_register_worker.hpp
face_recognition_tasks/global/: global_keywords.cpp  global_keywords.hpp  global_object.cpp  global_object.hpp
face_recognition_tasks/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  widget_face_det_model_select.cpp  widget_face_det_model_select.hpp  widget_face_det_model_select.ui  widget_face_recognition_model_select.cpp  widget_face_recognition_model_select.hpp  widget_face_recognition_model_select.ui  widget_faces_register.cpp  widget_faces_register.hpp  widget_faces_register.ui  widget_source_selection.cpp  widget_source_selection.ui  widget_stacks_faces_search.cpp  widget_stacks_faces_search.hpp  widget_stacks_faces_search.ui  widget_stacks_manager.cpp  widget_stacks_manager.hpp  widget_stream_player.cpp
generic_cv_tasks/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  readme.md  readme_cn.md  readme_en.md  trouble_records.md  trouble_records_cn.md
generic_cv_tasks/algo/: convert_input_to_image.cpp  convert_input_to_image.hpp  frame_display_worker.cpp  frame_display_worker.hpp  generic_obj_detector.cpp  generic_obj_detector.hpp  generic_worker_results.hpp
generic_cv_tasks/algo/action_classify/: action_classify_alert_save.cpp  action_classify_alert_save.hpp  kinetic_400_labels.cpp  kinetic_400_labels.hpp  pptsm_v2_worker.cpp  pptsm_v2_worker.hpp  pptsm_v2_worker_results.hpp
generic_cv_tasks/algo/fall_down_detect/: fall_down_det_alert_save.cpp  fall_down_det_alert_save.hpp  fall_down_obj_det_worker.cpp  fall_down_obj_det_worker.hpp
generic_cv_tasks/algo/obj_detect/: nanodet_alert_save.cpp  nanodet_alert_save.hpp  nanodet_worker.cpp  nanodet_worker.hpp  obj_det_worker_results.hpp
generic_cv_tasks/config/: config_action_classify_alert.hpp  config_action_classify_model_select.hpp  config_alert_sender.hpp  config_dialog_email_list.hpp  config_fall_down_condition.hpp  config_fall_down_obj_det_alert.hpp  config_fall_down_obj_det_worker.hpp  config_generic_obj_detector.hpp  config_nanodet_worker.hpp  config_object_detect_model_select.hpp  config_pptsm_v2_worker.hpp  config_read_write.cpp  config_read_write.hpp  config_select_action_to_classify.hpp  config_select_object_to_detect.cpp  config_select_object_to_detect.hpp  config_source_selection.cpp  config_source_selection.hpp  config_tasks_selection.hpp  config_tracker_alert.hpp  object_detect_model_enum.hpp  object_detect_model_select_config.hpp  select_object_to_detect_config.cpp  select_object_to_detect_config.hpp
generic_cv_tasks/global/: global_keywords.cpp  global_keywords.hpp  global_object.cpp  global_object.hpp
generic_cv_tasks/ui/: dialog_alert_sender_settings.cpp  dialog_alert_sender_settings.hpp  dialog_alert_sender_settings.ui  dialog_email_list.cpp  dialog_email_list.hpp  dialog_email_list.ui  dialog_stream_select.cpp  dialog_stream_select.hpp  dialog_stream_select.ui  frame_capture_creator.cpp  frame_capture_creator.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  object_detect_algo_widget.cpp  object_detect_algo_widget.hpp  object_detect_algo_widget.ui  source_selection.ui  widget_action_classify_alert.cpp  widget_action_classify_alert.ui  widget_action_classify_model_select.cpp  widget_action_classify_model_select.ui  widget_alert_sender_settings.cpp  widget_alert_sender_settings.hpp  widget_alert_sender_settings.ui  widget_fall_down_obj_det_alert.cpp  widget_fall_down_obj_det_alert.hpp  widget_fall_down_obj_det_alert.ui  widget_fall_down_param.cpp  widget_fall_down_param.hpp  widget_fall_down_param.ui  widget_multi_stream_manager.cpp  widget_multi_stream_manager.hpp  widget_multi_stream_manager.ui  widget_object_detect_model_select.cpp  widget_object_detect_model_select.hpp  widget_object_detect_model_select.ui  widget_roi_selection.cpp  widget_roi_selection.hpp  widget_select_action_to_classify.cpp  (+26 more)
generic_cv_tasks/ui/action_classify/: widget_action_classify_alert.cpp  widget_action_classify_alert.hpp  widget_action_classify_model_select.cpp  widget_action_classify_model_select.hpp  widget_select_action_to_classify.cpp  widget_stacks_action_classify.cpp  widget_stacks_action_classify.hpp  widget_stacks_action_classify.ui
generic_cv_tasks/ui/fall_down_detect/: widget_fall_down_condition.cpp  widget_fall_down_condition.hpp  (+7 more)
opencv_paddle_ocr_test/: CMakeLists.txt  crnn_process.cpp  crnn_process.hpp  db_post_process.cc  db_post_process.h  main.cpp  onnx_get_names_utils.cpp  onnx_get_names_utils.hpp  paddle_ocr_det_opencv.cpp  paddle_ocr_rec_onnx.cpp  paddle_ocr_rec_onnx.hpp  paddle_ocr_rec_opencv.cpp
small_tests/video_understand_test/: CMakeLists.txt  main.cpp
(+368 files in other folders)
